# Vulkan-Practice

./: README.md  VkApp.cpp  VkApp.h  VkDevice.cpp  VkDevice.h  VkPipeline.cpp  VkPipeline.h  VkWindow.cpp  VkWindow.h  appDevice.cpp  appDevice.h  appMain.cpp  appWnd.cpp  appWnd.h  compile.bat  main.cpp  meson.build
_internal/pyinstaller-6.0.0.dist-info/: RECORD
include/vma/: vk_mem_alloc.h
shaders/: shade.frag  shade.vert  triangle.frag  triangle.vert
